hphp/hack/test/typecheck/coeffects/ctor.php.like_types.exp
File "ctor.php", line 24, characters 14-27:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "ctor.php", line 23, characters 32-33:
  From this declaration, the context of this function body provides the capability set {}
  File "ctor.php", line 20, characters 32-41:
  But the function being called requires the capability set {IO, ImplicitPolicy, ReadGlobals, WriteProperty}
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
